--- a/sr_hand_config/5018/calibrations/calibration.yaml
+++ b/sr_hand_config/5018/calibrations/calibration.yaml
@@ -1,4 +1,4 @@
-# Copyright 2022, 2023 Shadow Robot Company Ltd.
+# Copyright 2024 Shadow Robot Company Ltd.
 #
 # This program is free software: you can redistribute it and/or modify it
 # under the terms of the GNU General Public License as published by the Free
@@ -12,33 +12,42 @@
 # You should have received a copy of the GNU General Public License along
 # with this program. If not, see <http://www.gnu.org/licenses/>.
 
+# This file contains an alternate approach to pedal connection, that falls victim to Ubuntu suspending USB devices.
+# Try as I might, I couldn't make Ubuntu leave it alone, so switched to the input events approach seen in
+# sr_triple_pedal.py. I'll leave this here in case it might be useful later.
+
 sr_calibrations: [
-["FFJ1", [[2987.0, 0.0], [2252.0, 22.5], [1457.0, 45.0], [805.0, 67.5], [305.0, 90.0]]], 
-["FFJ2", [[2996.0, 0.0], [2709.0, 22.5], [2318.0, 45.0], [1946.0, 67.5], [1557.0, 90.0]]], 
-["FFJ3", [[2345.26, 0.0], [1878.77, 22.5], [1491.49, 45.0], [1146.31, 67.5], [907.26, 90.0]]], 
-["FFJ4", [[2119.0, -20.0], [1780.0, -10.0], [1443.0, 0.0], [1125.0, 10.0], [878.0, 20.0]]], 
-["MFJ1", [[2959.0, 0.0], [2323.0, 22.5], [1647.0, 45.0], [1080.0, 67.5], [601.0, 90.0]]], 
-["MFJ2", [[2936.0, 0.0], [2594.0, 22.5], [2191.0, 45.0], [1773.0, 67.5], [1410.0, 90.0]]], 
-["MFJ3", [[2485.0, 0.0], [1991.0, 22.5], [1475.0, 45.0], [1079.0, 67.5], [793.0, 90.0]]], 
-["MFJ4", [[2281.0, -20.0], [1991.0, -10.0], [1690.0, 0.0], [1406.0, 10.0], [1132.0, 20.0]]], 
-["RFJ1", [[3174.0, 0.0], [2470.0, 22.5], [1844.0, 45.0], [1193.0, 67.5], [647.0, 90.0]]], 
-["RFJ2", [[2832.0, 0.0], [2551.0, 22.5], [2173.0, 45.0], [1711.0, 67.5], [1311.0, 90.0]]], 
-["RFJ3", [[2379.0, 0.0], [1892.0, 22.5], [1384.0, 45.0], [1012.0, 67.5], [712.0, 90.0]]], 
+["FFJ1", [[2980.0, 0.0], [2222.0, 22.5], [1410.0, 45.0], [771.0, 67.5], [254.0, 90.0]]], 
+["FFJ2", [[2988.0, 0.0], [2705.0, 22.5], [2345.0, 45.0], [1908.0, 67.5], [1510.0, 90.0]]], 
+["FFJ3", [[2767.0, -15.0], [2393.0, 0.0], [1911.0, 22.5], [1462.0, 45.0], [1114.0, 67.5], [858.0, 90.0]]], 
+["FFJ4", [[2119.0, -20.0], [1780.0, -10.0], [1399.0, 0.0], [1125.0, 10.0], [878.0, 20.0]]], 
+["MFJ1", [[2964.0, 0.0], [2255.0, 22.5], [1612.0, 45.0], [960.0, 67.5], [552.0, 90.0]]], 
+["MFJ2", [[2930.0, 0.0], [2571.0, 22.5], [2180.0, 45.0], [1756.0, 67.5], [1360.0, 90.0]]], 
+["MFJ3", [[3095.0, -15.0], [2587.0, 0.0], [1966.0, 22.5], [1348.0, 45.0], [902.0, 67.5], [627.0, 90.0]]], 
+["MFJ4", [[2281.0, -20.0], [1991.0, -10.0], [1729.0, 0.0], [1406.0, 10.0], [1132.0, 20.0]]], 
+["RFJ1", [[3150.94, 0.0], [2516.0, 22.5], [1781.0, 45.0], [1163.0, 67.5], [591.0, 90.0]]], 
+["RFJ2", [[2851.36, 0.0], [2508.0, 22.5], [2127.0, 45.0], [1697.0, 67.5], [1267.0, 90.0]]], 
+["RFJ3", [[2783.0, -15.0], [2364.0, 0.0], [1842.0, 22.5], [1377.0, 45.0], [1016.0, 67.5], [740.0, 90.0]]], 
 ["RFJ4", [[991.0, -20.0], [1298.0, -10.0], [1622.0, 0.0], [1965.0, 10.0], [2289.0, 20.0]]], 
-["LFJ1", [[3398.0, 0.0], [2765.0, 22.5], [2042.0, 45.0], [1467.0, 67.5], [739.0, 90.0]]], 
-["LFJ2", [[2878.0, 0.0], [2550.0, 22.5], [2167.0, 45.0], [1763.0, 67.5], [1448.0, 90.0]]], 
-["LFJ3", [[2598.0, 0.0], [2078.0, 22.5], [1583.0, 45.0], [1194.0, 67.5], [929.0, 90.0]]], 
-["LFJ4", [[959.0, -20.0], [1241.0, -10.0], [1560.0, 0.0], [1871.0, 10.0], [2198.0, 20.0]]], 
-["LFJ5", [[1512.0, 0.0], [2044.0, 22.5], [2522.0, 45.0], [3206.0, 67.5]]], 
-["THJ3", [[2497.0, -12.0], [1672.0, 0.0], [1120.0, 12.0]]], 
-["THJ4", [[1431.0, 0.0], [1722.0, 22.5], [2016.0, 45.0], [2313.0, 67.5]]], 
-["THJ5", [[528.0, -60.0], [801.0, -45.0], [1051.0, -30.0], [1300.0, -15.0], [1596.0, 0.0], [2013.0, 15.0], [2365.0, 30.0], [2774.0, 45.0], [3078.0, 60.0]]], 
-["WRJ1", [[2585.0, -45.0], [2402.0, -22.5], [2117.0, 0.0], [1927.0, 15.0], [1764.0, 30.0]]], 
+["LFJ1", [[3336.0, 0.0], [2761.0, 22.5], [2082.0, 45.0], [1475.0, 67.5], [787.0, 90.0]]], 
+["LFJ2", [[2886.0, 0.0], [2567.0, 22.5], [2170.0, 45.0], [1785.0, 67.5], [1403.0, 90.0]]], 
+["LFJ3", [[2868.0, -15.0], [2589.0, 0.0], [2140.0, 22.5], [1709.0, 45.0], [1344.0, 67.5], [1007.0, 90.0]]], 
+["LFJ4", [[959.0, -20.0], [1241.0, -10.0], [1533.0, 0.0], [1871.0, 10.0], [2198.0, 20.0]]], 
+["LFJ5", [[1484.0, 0.0], [2044.0, 22.5], [2522.0, 45.0], [3206.0, 67.5]]], 
+["THJ3", [[2248.0, -12.0], [1575.0, 0.0], [1084.0, 12.0]]], 
+["THJ4", [[1426.0, 0.0], [1749.0, 22.5], [2043.0, 45.0], [2328.0, 67.5]]], 
+["THJ5", [[514.0, -60.0], [820.0, -45.0], [1055.0, -30.0], [1328.0, -15.0], [1595.0, 0.0], [2042.0, 15.0], [2422.0, 30.0], [2818.0, 45.0], [3080.0, 60.0]]], 
+["WRJ1", [[2585.0, -45.0], [2402.0, -22.5], [2134.0, 0.0], [1927.0, 15.0], [1764.0, 30.0]]], 
 ["WRJ2", [[2731.0, -30.0], [1357.0, 0.0], [843.0, 10.0]]], 
 ]
 
 sr_calibrations_coupled: [
-[["THJ1", "THJ2"], [[[2742.0, 2373.0], 0.0, 40.0], 
+[["THJ1", "THJ2"], [[[2974.0, 2380.0], -15.0, 40.0], 
+                    [[2967.0, 2223.0], -15.0, 20.0], 
+                    [[2951.0, 2042.0], -15.0, 0.0], 
+                    [[2930.0, 1869.0], -15.0, -20.0], 
+                    [[2905.0, 1721.0], -15.0, -40.0],
+                    [[2742.0, 2373.0], 0.0, 40.0], 
                     [[2733.0, 2211.0], 0.0, 20.0], 
                     [[2710.0, 2027.0], 0.0, 0.0], 
                     [[2692.0, 1855.0], 0.0, -20.0], 
