--- a/sr_hand_config/4106/rates/sensor_data_polling.yaml
+++ b/sr_hand_config/4106/rates/sensor_data_polling.yaml
@@ -1,4 +1,4 @@
-# Copyright 2022 Shadow Robot Company Ltd.
+# Copyright 2024 Shadow Robot Company Ltd.
 #
 # This program is free software: you can redistribute it and/or modify it
 # under the terms of the GNU General Public License as published by the Free
@@ -47,4 +47,9 @@ biotac_sensor_data_update_rate: {
 ubi0_sensor_data_update_rate: {
   TACTILE_SENSOR_TYPE_UBI0_TACTILE: -1.
   }
+
+mst_sensor_data_update_rate: {
+  TACTILE_SENSOR_TYPE_MST_MAGNETIC_INDUCTION: -1.,
+  TACTILE_SENSOR_TYPE_MST_TEMPERATURE: 1.
+}
 
