--- a/sr_hand_config/2346/general_info.yaml
+++ b/sr_hand_config/2346/general_info.yaml
@@ -1,4 +1,4 @@
-# Copyright 2022 Shadow Robot Company Ltd.
+# Copyright 2024 Shadow Robot Company Ltd.
 #
 # This program is free software: you can redistribute it and/or modify it
 # under the terms of the GNU General Public License as published by the Free
@@ -17,7 +17,7 @@ type: 'hand_e'
 version: 'E3M5'
 fingers: [th, ff, mf, rf, lf]
 sensors:
-  tip: {th: bt_sp, ff: bt_sp, mf: bt_sp, rf: bt_sp, lf: bt_sp}
+  tip: {th: mst, ff: mst, mf: mst, rf: mst, lf: mst}
   mid: {}
   prox: {}
   palm: {}
