--- a/sr_hand_config/2346/calibrations/calibration.yaml
+++ b/sr_hand_config/2346/calibrations/calibration.yaml
@@ -1,4 +1,4 @@
-# Copyright 2022 Shadow Robot Company Ltd.
+# Copyright 2024 Shadow Robot Company Ltd.
 #
 # This program is free software: you can redistribute it and/or modify it
 # under the terms of the GNU General Public License as published by the Free
@@ -13,54 +13,59 @@
 # with this program. If not, see <http://www.gnu.org/licenses/>.
 
 sr_calibrations: [
-["FFJ1", [[3038.0, 0.0], [2416.0, 22.5], [1698.0, 45.0], [1018.0, 67.5], [512.0, 90.0]]], 
-["FFJ2", [[2967.0, 0.0], [2700.0, 22.5], [2244.0, 45.0], [1795.0, 67.5], [1362.0, 90.0]]], 
-["FFJ3", [[1818.0, 0.0], [2093.0, 22.5], [2360.0, 45.0], [2583.0, 67.5], [2720.0, 90.0]]], 
-["FFJ4", [[650.0, -20.0], [956.0, -10.0], [1290.0, 0.0], [1662.0, 10.0], [2043.0, 20.0]]], 
-["MFJ1", [[3025.0, 0.0], [2391.0, 22.5], [1654.0, 45.0], [1087.0, 67.5], [574.0, 90.0]]], 
-["MFJ2", [[2970.0, 0.0], [2777.0, 22.5], [2423.0, 45.0], [1974.0, 67.5], [1464.0, 90.0]]], 
-["MFJ3", [[1585.0, 0.0], [1806.0, 22.5], [2063.0, 45.0], [2326.0, 67.5], [2568.0, 90.0]]], 
-["MFJ4", [[932.0, -20.0], [1303.0, -10.0], [1694.0, 0.0], [2094.0, 10.0], [2447.0, 20.0]]], 
-["RFJ1", [[2779.0, 0.0], [2171.0, 22.5], [1470.0, 45.0], [853.0, 67.5], [490.0, 90.0]]], 
-["RFJ2", [[2732.0, 0.0], [2455.0, 22.5], [2045.0, 45.0], [1703.0, 67.5], [1393.0, 90.0]]], 
-["RFJ3", [[1754.0, 0.0], [2010.0, 22.5], [2289.0, 45.0], [2518.0, 67.5], [2678.0, 90.0]]], 
-["RFJ4", [[2254.0, -20.0], [1922.0, -10.0], [1558.0, 0.0], [1241.0, 10.0], [949.0, 20.0]]], 
-["LFJ1", [[3146.0, 0.0], [2571.0, 22.5], [1944.0, 45.0], [1389.0, 67.5], [706.0, 90.0]]], 
-["LFJ2", [[2952.0, 0.0], [2716.0, 22.5], [2357.0, 45.0], [1894.0, 67.5], [1569.0, 90.0]]], 
-["LFJ3", [[1886.0, 0.0], [2107.0, 22.5], [2348.0, 45.0], [2541.0, 67.5], [2658.0, 90.0]]], 
-["LFJ4", [[2134.0, -20.0], [1762.0, -10.0], [1480.0, 0.0], [1164.0, 10.0], [947.0, 20.0]]], 
+["FFJ1", [[3107.0, 0.0], [2416.0, 22.5], [1698.0, 45.0], [1018.0, 67.5], [512.0, 90.0]]], 
+["FFJ2", [[2962.0, 0.0], [2700.0, 22.5], [2244.0, 45.0], [1795.0, 67.5], [1362.0, 90.0]]], 
+["FFJ3", [[1579.0, -15.0], [1818.0, 0.0], [2093.0, 22.5], [2360.0, 45.0], [2583.0, 67.5], [2706.0, 90.0]]], 
+["FFJ4", [[585.0, -20.0], [893.0, -10.0], [1259.0, 0.0], [1605.0, 10.0], [1950.0, 20.0]]], 
+["MFJ1", [[3004.0, 0.0], [2391.0, 22.5], [1654.0, 45.0], [1087.0, 67.5], [574.0, 90.0]]], 
+["MFJ2", [[2981.0, 0.0], [2777.0, 22.5], [2423.0, 45.0], [1974.0, 67.5], [1464.0, 90.0]]], 
+["MFJ3", [[1400.0, -15.0], [1576.0, 0.0], [1806.0, 22.5], [2063.0, 45.0], [2326.0, 67.5], [2577.0, 90.0]]], 
+["MFJ4", [[927.0, -20.0], [1323.0, -10.0], [1699.0, 0.0], [2083.0, 10.0], [2454.0, 20.0]]], 
+["RFJ1", [[3050.0, 0.0], [2171.0, 22.5], [1470.0, 45.0], [853.0, 67.5], [490.0, 90.0]]], 
+["RFJ2", [[2706.0, 0.0], [2455.0, 22.5], [2045.0, 45.0], [1703.0, 67.5], [1393.0, 90.0]]], 
+["RFJ3", [[1503.0, -15.0], [1747.0, 0.0], [2010.0, 22.5], [2289.0, 45.0], [2518.0, 67.5], [2729.0, 90.0]]], 
+["RFJ4", [[2250.0, -20.0], [1922.0, -10.0], [1555.0, 0.0], [1225.0, 10.0], [933.0, 20.0]]], 
+["LFJ1", [[3159.0, 0.0], [2571.0, 22.5], [1944.0, 45.0], [1389.0, 67.5], [706.0, 90.0]]], 
+["LFJ2", [[2958.0, 0.0], [2716.0, 22.5], [2357.0, 45.0], [1894.0, 67.5], [1569.0, 90.0]]], 
+["LFJ3", [[1655.0, -15.0], [1898.0, 0.0], [2107.0, 22.5], [2348.0, 45.0], [2541.0, 67.5], [2680.0, 90.0]]], 
+["LFJ4", [[2135.0, -20.0], [1825.0, -10.0], [1491.0, 0.0], [1188.0, 10.0], [932.0, 20.0]]], 
 ["LFJ5", [[537.0, 0.0], [1753.0, 22.5], [2209.0, 45.0], [2891.0, 67.5]]], 
 ["THJ3", [[1461.0, -12.0], [2167.0, 0.0], [2658.0, 12.0]]], 
 ["THJ4", [[1486.0, 0.0], [1776.0, 22.5], [2116.0, 45.0], [2423.0, 67.5]]], 
 ["THJ5", [[896.0, -60.0], [1227.0, -45.0], [1515.0, -30.0], [1858.0, -15.0], [2307.0, 0.0], [2567.0, 15.0], [2868.0, 30.0], [3166.0, 45.0], [3449.0, 60.0]]], 
-["WRJ1", [[1545.0, -45.0], [1692.0, -22.5], [1896.0, 0.0], [2022.0, 15.0], [2138.0, 30.0]]], 
-["WRJ2", [[2493.0, -30.0], [1473.0, 0.0], [1227.0, 10.0]]], 
+["WRJ1", [[1509.0, -45.0], [1658.0, -22.5], [1793.0, 0.0], [1970.0, 15.0], [2075.0, 30.0]]], 
+["WRJ2", [[2486.0, -30.0], [1517.0, 0.0], [1155.0, 10.0]]], 
 ]
 
 sr_calibrations_coupled: [
-[["THJ1", "THJ2"], [[[2804.0, 2193.0], 0.0, 40.0], 
+[["THJ1", "THJ2"], [[[3016.0, 2221.0], -15.0, 40.0], 
+                    [[3003.0, 2071.0], -15.0, 20.0], 
+                    [[2987.0, 1892.0], -15.0, 0.0], 
+                    [[2973.0, 1767.0], -15.0, -20.0], 
+                    [[2958.0, 1661.0], -15.0, -40.0],
+                    [[2805.0, 2208.0], 0.0, 40.0], 
                     [[2790.0, 2040.0], 0.0, 20.0], 
-                    [[2776.0, 1894.0], 0.0, 0.0], 
-                    [[2758.0, 1757.0], 0.0, -20.0], 
-                    [[2745.0, 1660.0], 0.0, -40.0], 
-                    [[2418.0, 2169.0], 22.5, 40.0], 
-                    [[2403.0, 2018.0], 22.5, 20.0], 
-                    [[2388.0, 1872.0], 22.5, 0.0], 
-                    [[2371.0, 1738.0], 22.5, -20.0], 
-                    [[2357.0, 1639.0], 22.5, -40.0], 
-                    [[1928.0, 2143.0], 45.0, 40.0], 
-                    [[1915.0, 1993.0], 45.0, 20.0], 
-                    [[1899.0, 1838.0], 45.0, 0.0], 
-                    [[1885.0, 1711.0], 45.0, -20.0], 
-                    [[1874.0, 1615.0], 45.0, -40.0], 
-                    [[1448.0, 2109.0], 67.5, 40.0], 
-                    [[1442.0, 1972.0], 67.5, 20.0], 
-                    [[1430.0, 1822.0], 67.5, 0.0], 
+                    [[2781.0, 1898.0], 0.0, 0.0], 
+                    [[2762.0, 1756.0], 0.0, -20.0], 
+                    [[2750.0, 1651.0], 0.0, -40.0], 
+                    [[2410.0, 2186.0], 22.5, 40.0], 
+                    [[2394.0, 2027.0], 22.5, 20.0], 
+                    [[2387.0, 1865.0], 22.5, 0.0], 
+                    [[2362.0, 1717.0], 22.5, -20.0], 
+                    [[2352.0, 1620.0], 22.5, -40.0], 
+                    [[1911.0, 2162.0], 45.0, 40.0], 
+                    [[1906.0, 1992.0], 45.0, 20.0], 
+                    [[1890.0, 1836.0], 45.0, 0.0], 
+                    [[1866.0, 1687.0], 45.0, -20.0], 
+                    [[1851.0, 1595.0], 45.0, -40.0], 
+                    [[1427.0, 2126.0], 67.5, 40.0], 
+                    [[1407.0, 1990.0], 67.5, 20.0], 
+                    [[1398.0, 1817.0], 67.5, 0.0], 
                     [[1413.0, 1689.0], 67.5, -20.0], 
-                    [[1399.0, 1587.0], 67.5, -40.0], 
-                    [[1054.0, 2092.0], 90.0, 40.0], 
-                    [[1017.0, 1949.0], 90.0, 20.0], 
-                    [[999.0, 1799.0], 90.0, 0.0], 
-                    [[991.0, 1669.0], 90.0, -20.0], 
-                    [[981.0, 1567.0], 90.0, -40.0]]]
+                    [[1376.0, 1580.0], 67.5, -40.0], 
+                    [[1023.0, 2105.0], 90.0, 40.0], 
+                    [[996.0, 1972.0], 90.0, 20.0], 
+                    [[973.0, 1806.0], 90.0, 0.0], 
+                    [[958.0, 1643.0], 90.0, -20.0], 
+                    [[951.0, 1553.0], 90.0, -40.0]]]
 ]
