--- a/sr_hand_config/Template_GR/general_info.yaml
+++ b/sr_hand_config/Template_GR/general_info.yaml
@@ -14,7 +14,7 @@
 
 side: 'right'
 type: 'hand_g'
-version: 'G4'
+version: 'G4'  # It should be changed back to 'G1M5' (old hand palm) until the next hand E software release
 fingers: [th, ff, mf, rf]
 sensors:
   tip: {th: mst, ff: mst, mf: mst, rf: mst}
