--- a/sr_hand_config/1370/calibrations/calibration.yaml
+++ b/sr_hand_config/1370/calibrations/calibration.yaml
@@ -1,4 +1,4 @@
-# Copyright 2022 Shadow Robot Company Ltd.
+# Copyright 2025 Shadow Robot Company Ltd.
 #
 # This program is free software: you can redistribute it and/or modify it
 # under the terms of the GNU General Public License as published by the Free
@@ -13,25 +13,25 @@
 # with this program. If not, see <http://www.gnu.org/licenses/>.
 
 sr_calibrations: [
-["FFJ1", [[3064.0, 0.0], [2471.0, 22.5], [1769.0, 45.0], [1108.0, 67.5], [555.0, 90.0]]], 
-["FFJ2", [[2766.0, 0.0], [2452.0, 22.5], [2065.0, 45.0], [1665.0, 67.5], [1311.0, 90.0]]], 
-["FFJ3", [[2782.0, -15.0], [2507.0, 0.0], [2208.0, 15.0], [1896.0, 30.0], [1632.0, 45.0], [1281.0, 60.0], [1021.0, 75.0], [835.0, 90.0]]], 
-["FFJ4", [[2711.0, -20.0], [2540.0, -10.0], [2360.0, 0.0], [2149.0, 10.0], [1968.0, 20.0]]], 
-["MFJ1", [[3266.0, 0.0], [2624.0, 22.5], [1980.0, 45.0], [1323.0, 67.5], [710.0, 90.0]]], 
-["MFJ2", [[2825.0, 0.0], [2531.0, 22.5], [2176.0, 45.0], [1801.0, 67.5], [1464.0, 90.0]]], 
-["MFJ3", [[2765.0, -15.0], [2467.0, 0.0], [2127.0, 15.0], [1796.0, 30.0], [1465.0, 45.0], [1178.0, 60.0], [958.0, 75.0], [798.0, 90.0]]], 
-["MFJ4", [[2553.0, -20.0], [2325.0, -10.0], [2025.0, 0.0], [1768.0, 10.0], [1485.0, 20.0]]], 
-["RFJ1", [[3141.0, 0.0], [2519.0, 22.5], [1873.0, 45.0], [1222.0, 67.5], [689.0, 90.0]]], 
-["RFJ2", [[3012.0, 0.0], [2719.0, 22.5], [2315.0, 45.0], [1913.0, 67.5], [1555.0, 90.0]]], 
-["RFJ3", [[2951.0, -15.0], [2626.0, 0.0], [2196.0, 15.0], [1857.0, 30.0], [1491.0, 45.0], [1329.0, 60.0], [900.0, 75.0], [712.0, 90.0]]], 
-["RFJ4", [[1866.0, -20.0], [2183.0, -10.0], [2430.0, 0.0], [2687.0, 10.0], [2942.0, 20.0]]], 
-["LFJ1", [[3052.01, 0.0], [2388.0, 22.5], [1718.0, 45.0], [1066.0, 67.5], [554.0, 90.0]]], 
-["LFJ2", [[2950.93, 0.0], [2652.0, 22.5], [2239.0, 45.0], [1750.0, 67.5], [1365.0, 90.0]]], 
-["LFJ3", [[2613.0, -15.0], [2379.96, 0.0], [2028.0, 15.0], [1738.0, 30.0], [1467.0, 45.0], [1220.0, 60.0], [985.0, 75.0], [819.0, 90.0]]], 
-["LFJ4", [[1295.0, -20.0], [1528.0, -10.0], [1783.0, 0.0], [2018.0, 10.0], [2242.0, 20.0]]], 
-["LFJ5", [[636.0, 0.0], [1492.0, 22.5], [2028.0, 45.0], [2516.0, 67.5]]], 
-["THJ3", [[2060.52, -12.0], [1821.0, 0.0], [1130.8, 12.0]]], 
-["THJ4", [[2521.0, 0.0], [2405.0, 11.25], [2264.0, 22.5], [2120.0, 33.75], [1980.0, 45.0], [1840.0, 56.25], [1702.0, 67.5]]], 
+["FFJ1", [[3124.0, 0.0], [2471.0, 22.5], [1725.0, 45.0], [1100.0, 67.5], [506.0, 90.0]]], 
+["FFJ2", [[2750.0, 0.0], [2418.0, 22.5], [2081.0, 45.0], [1710.0, 67.5], [1287.0, 90.0]]], 
+["FFJ3", [[2868.0, -15.0], [2512.0, 0.0], [2053.0, 22.5], [1614.0, 45.0], [1142.0, 67.5], [850.0, 90.0]]], 
+["FFJ4", [[2680.0, -20.0], [2500.0, -10.0], [2299.0, 0.0], [2100.0, 10.0], [1915.0, 20.0]]], 
+["MFJ1", [[3282.0, 0.0], [2685.0, 22.5], [2025.0, 45.0], [1214.0, 67.5], [621.0, 90.0]]], 
+["MFJ2", [[2832.0, 0.0], [2496.0, 22.5], [2162.0, 45.0], [1834.0, 67.5], [1487.0, 90.0]]], 
+["MFJ3", [[2869.0, -15.0], [2444.0, 0.0], [1946.0, 22.5], [1464.0, 45.0], [1046.0, 67.5], [796.0, 90.0]]], 
+["MFJ4", [[2488.0, -20.0], [2233.0, -10.0], [1965.0, 0.0], [1704.0, 10.0], [1441.0, 20.0]]], 
+["RFJ1", [[3141.0, 0.0], [2519.0, 22.5], [1831.0, 45.0], [1199.0, 67.5], [654.0, 90.0]]], 
+["RFJ2", [[2998.0, 0.0], [2694.0, 22.5], [2357.0, 45.0], [1969.0, 67.5], [1604.0, 90.0]]], 
+["RFJ3", [[3061.0, -15.0], [2666.0, 0.0], [2039.0, 22.5], [1491.0, 45.0], [942.0, 67.5], [620.0, 90.0]]], 
+["RFJ4", [[1878.0, -20.0], [2120.0, -10.0], [2380.0, 0.0], [2669.0, 10.0], [2918.0, 20.0]]], 
+["LFJ1", [[3037.01, 0.0], [2394.0, 22.5], [1685.0, 45.0], [986.0, 67.5], [483.0, 90.0]]], 
+["LFJ2", [[2932.93, 0.0], [2635.0, 22.5], [2268.0, 45.0], [1816.0, 67.5], [1388.0, 90.0]]], 
+["LFJ3", [[2715.0, -15.0], [2322.96, 0.0], [1869.0, 22.5], [1444.0, 45.0], [1075.0, 67.5], [811.0, 90.0]]], 
+["LFJ4", [[1300.0, -20.0], [1539.0, -10.0], [1776.0, 0.0], [2053.0, 10.0], [2306.0, 20.0]]], 
+["LFJ5", [[480.0, 0.0], [1371.0, 22.5], [1891.0, 45.0]]], 
+["THJ3", [[2337.52, -12.0], [1689.0, 0.0], [1066.8, 12.0]]], 
+["THJ4", [[2507.0, 0.0], [2188.0, 22.5], [1918.0, 45.0], [1657.0, 67.5]]], 
 ["THJ5", [[566.0, -60.0], [823.0, -45.0], [1077.0, -30.0], [1334.0, -15.0], [1668.0, 0.0], [2141.0, 15.0], [2503.0, 30.0], [2767.0, 45.0], [3009.0, 60.0]]], 
 ["WRJ1", [[2171.0, -45.0], [2003.0, -22.5], [1872.0, 0.0], [1746.0, 15.0], [1663.0, 30.0]]], 
 ["WRJ2", [[2671.0, -30.0], [1283.0, 0.0], [761.0, 10.0]]], 
