--- a/sr_hand_config/4154/calibrations/calibration.yaml
+++ b/sr_hand_config/4154/calibrations/calibration.yaml
@@ -1,4 +1,4 @@
-# Copyright 2024 Shadow Robot Company Ltd.
+# Copyright 2025 Shadow Robot Company Ltd.
 #
 # This program is free software: you can redistribute it and/or modify it
 # under the terms of the GNU General Public License as published by the Free
@@ -15,52 +15,57 @@
 sr_calibrations: [
 ["FFJ1", [[3328.0, 0.0], [2543.0, 22.5], [1742.0, 45.0], [960.0, 67.5], [384.0, 90.0]]], 
 ["FFJ2", [[2941.0, 0.0], [2717.0, 22.5], [2383.0, 45.0], [1996.0, 67.5], [1625.0, 90.0]]], 
-["FFJ3", [[1790.0, 0.0], [2120.0, 22.5], [2424.0, 45.0], [2669.0, 67.5], [2801.0, 90.0]]], 
-["FFJ4", [[1492.0, -20.0], [1767.0, -10.0], [2052.0, 0.0], [2322.0, 10.0], [2605.0, 20.0]]], 
+["FFJ3", [[1549.0, -15.0], [1790.0, 0.0], [2120.0, 22.5], [2424.0, 45.0], [2669.0, 67.5], [2801.0, 90.0]]], 
+["FFJ4", [[1492.0, -20.0], [1767.0, -10.0], [2074.0, 0.0], [2322.0, 10.0], [2605.0, 20.0]]], 
 ["MFJ1", [[3229.0, 0.0], [2430.0, 22.5], [1633.0, 45.0], [862.0, 67.5], [310.0, 90.0]]], 
 ["MFJ2", [[2739.0, 0.0], [2477.0, 22.5], [2064.0, 45.0], [1668.0, 67.5], [1299.0, 90.0]]], 
-["MFJ3", [[1660.0, 0.0], [1975.0, 22.5], [2310.0, 45.0], [2600.0, 67.5], [2800.0, 90.0]]], 
-["MFJ4", [[1302.0, -20.0], [1606.0, -10.0], [1910.0, 0.0], [2217.0, 10.0], [2549.0, 20.0]]], 
+["MFJ3", [[1435.0, -15.0], [1636.0, 0.0], [1975.0, 22.5], [2310.0, 45.0], [2600.0, 67.5], [2800.0, 90.0]]], 
+["MFJ4", [[1302.0, -20.0], [1606.0, -10.0], [1909.0, 0.0], [2217.0, 10.0], [2549.0, 20.0]]], 
 ["RFJ1", [[3323.0, 0.0], [2606.0, 22.5], [1789.0, 45.0], [992.0, 67.5], [436.0, 90.0]]], 
 ["RFJ2", [[2880.0, 0.0], [2614.0, 22.5], [2251.0, 45.0], [1859.0, 67.5], [1500.0, 90.0]]], 
-["RFJ3", [[1719.0, 0.0], [2020.0, 22.5], [2321.0, 45.0], [2587.0, 67.5], [2778.0, 90.0]]], 
-["RFJ4", [[2698.0, -20.0], [2347.0, -10.0], [1984.0, 0.0], [1614.0, 10.0], [1314.0, 20.0]]], 
+["RFJ3", [[1472.0, -15.0], [1719.0, 0.0], [2020.0, 22.5], [2321.0, 45.0], [2587.0, 67.5], [2778.0, 90.0]]], 
+["RFJ4", [[2698.0, -20.0], [2347.0, -10.0], [1981.0, 0.0], [1614.0, 10.0], [1314.0, 20.0]]], 
 ["LFJ1", [[3420.0, 0.0], [2662.0, 22.5], [1876.0, 45.0], [1102.0, 67.5], [516.0, 90.0]]], 
 ["LFJ2", [[2823.0, 0.0], [2515.0, 22.5], [2125.0, 45.0], [1746.0, 67.5], [1355.0, 90.0]]], 
-["LFJ3", [[1738.0, 0.0], [2002.0, 22.5], [2272.0, 45.0], [2504.0, 67.5], [2689.0, 90.0]]], 
-["LFJ4", [[2617.0, -20.0], [2295.0, -10.0], [1973.0, 0.0], [1631.0, 10.0], [1384.0, 20.0]]], 
+["LFJ3", [[1549.0, -15.0], [1738.0, 0.0], [2002.0, 22.5], [2272.0, 45.0], [2504.0, 67.5], [2689.0, 90.0]]], 
+["LFJ4", [[2617.0, -20.0], [2295.0, -10.0], [1967.0, 0.0], [1631.0, 10.0], [1384.0, 20.0]]], 
 ["LFJ5", [[1694.0, 0.0], [2215.0, 22.5], [2937.0, 45.0], [3870.0, 67.5]]], 
-["THJ3", [[2521.0, -15.0], [1654.0, 0.0], [1094.0, 15.0]]], 
-["THJ4", [[1512.0, 0.0], [1837.0, 22.5], [2142.0, 45.0], [2454.0, 67.5]]], 
-["THJ5", [[667.0, -60.0], [838.0, -45.0], [1098.0, -30.0], [1438.0, -15.0], [1858.0, 0.0], [2299.0, 15.0], [2669.0, 30.0], [2871.0, 45.0], [3120.0, 60.0]]], 
-["WRJ1", [[2404.0, -45.0], [2313.0, -22.5], [2175.0, 0.0], [2052.0, 15.0], [1930.0, 30.0]]], 
-["WRJ2", [[2977.0, -30.0], [1452.0, 0.0], [939.0, 10.0]]], 
+["THJ3", [[2384.0, -12.0], [1735.0, 0.0], [1203.0, 12.0]]], 
+["THJ4", [[1474.0, 0.0], [1795.0, 22.5], [2118.0, 45.0], [2425.0, 67.5]]], 
+["THJ5", [[713.0, -60.0], [872.0, -45.0], [1107.0, -30.0], [1438.0, -15.0], [1845.0, 0.0], [2261.0, 15.0], [2611.0, 30.0], [2821.0, 45.0], [3062.0, 60.0]]], 
+["WRJ1", [[2410.0, -45.0], [2317.0, -22.5], [2158.0, 0.0], [2033.0, 15.0], [1920.0, 30.0]]], 
+["WRJ2", [[2962.0, -30.0], [1556.0, 0.0], [1133.0, 10.0]]], 
 ]
 
 sr_calibrations_coupled: [
-[["THJ1", "THJ2"], [[[2601.0, 2418.0], 0.0, 40.0], 
-                    [[2579.0, 2213.0], 0.0, 20.0], 
-                    [[2556.0, 1999.0], 0.0, 0.0], 
-                    [[2537.0, 1828.0], 0.0, -20.0], 
-                    [[2525.0, 1684.0], 0.0, -40.0], 
-                    [[2168.0, 2398.0], 22.5, 40.0], 
-                    [[2159.0, 2189.0], 22.5, 20.0], 
-                    [[2143.0, 2011.0], 22.5, 0.0], 
-                    [[2119.0, 1794.0], 22.5, -20.0], 
-                    [[2109.0, 1666.0], 22.5, -40.0], 
-                    [[1751.0, 2374.0], 45.0, 40.0], 
-                    [[1739.0, 2163.0], 45.0, 20.0], 
-                    [[1712.0, 1957.0], 45.0, 0.0], 
-                    [[1697.0, 1766.0], 45.0, -20.0], 
-                    [[1679.0, 1639.0], 45.0, -40.0], 
-                    [[1363.0, 2348.0], 67.5, 40.0], 
-                    [[1355.0, 2140.0], 67.5, 20.0], 
-                    [[1332.0, 1925.0], 67.5, 0.0], 
-                    [[1320.0, 1747.0], 67.5, -20.0], 
-                    [[1303.0, 1618.0], 67.5, -40.0], 
-                    [[1071.0, 2331.0], 90.0, 40.0], 
-                    [[1059.0, 2113.0], 90.0, 20.0], 
-                    [[1038.0, 1905.0], 90.0, 0.0], 
-                    [[1024.0, 1719.0], 90.0, -20.0], 
-                    [[1013.0, 1590.0], 90.0, -40.0]]]
+[["THJ1", "THJ2"], [[[2870.0, 2360.0], -15.0, 40.0], 
+                    [[2850.0, 2190.0], -15.0, 20.0], 
+                    [[2838.0, 2003.0], -15.0, 0.0], 
+                    [[2824.0, 1836.0], -15.0, -20.0], 
+                    [[2809.0, 1698.0], -15.0, -40.0],
+                    [[2564.0, 2347.0], 0.0, 40.0], 
+                    [[2552.0, 2173.0], 0.0, 20.0], 
+                    [[2534.0, 1987.0], 0.0, 0.0], 
+                    [[2520.0, 1820.0], 0.0, -20.0], 
+                    [[2510.0, 1683.0], 0.0, -40.0], 
+                    [[2160.0, 2327.0], 22.5, 40.0], 
+                    [[2142.0, 2154.0], 22.5, 20.0], 
+                    [[2120.0, 1961.0], 22.5, 0.0], 
+                    [[2104.0, 1795.0], 22.5, -20.0], 
+                    [[2092.0, 1659.0], 22.5, -40.0], 
+                    [[1734.0, 2299.0], 45.0, 40.0], 
+                    [[1717.0, 2120.0], 45.0, 20.0], 
+                    [[1700.0, 1938.0], 45.0, 0.0], 
+                    [[1679.0, 1772.0], 45.0, -20.0], 
+                    [[1670.0, 1636.0], 45.0, -40.0], 
+                    [[1333.0, 2274.0], 67.5, 40.0], 
+                    [[1322.0, 2104.0], 67.5, 20.0], 
+                    [[1303.0, 1915.0], 67.5, 0.0], 
+                    [[1286.0, 1750.0], 67.5, -20.0], 
+                    [[1274.0, 1611.0], 67.5, -40.0], 
+                    [[1067.0, 2257.0], 90.0, 40.0], 
+                    [[1052.0, 2078.0], 90.0, 20.0], 
+                    [[1032.0, 1901.0], 90.0, 0.0], 
+                    [[1017.0, 1737.0], 90.0, -20.0], 
+                    [[1005.0, 1597.0], 90.0, -40.0]]]
 ]
