--- a/sr_hand_config/1834/controls/motors/motor_board_effort_controllers.yaml
+++ b/sr_hand_config/1834/controls/motors/motor_board_effort_controllers.yaml
@@ -1,294 +1,380 @@
-# Copyright 2022 Shadow Robot Company Ltd.
-#
-# This program is free software: you can redistribute it and/or modify it
-# under the terms of the GNU General Public License as published by the Free
-# Software Foundation version 2 of the License.
-#
-# This program is distributed in the hope that it will be useful, but WITHOUT
-# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
-# FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
-# more details.
-#
-# You should have received a copy of the GNU General Public License along
-# with this program. If not, see <http://www.gnu.org/licenses/>.
-
 ffj0:
+  backlash_compensation: true
   pid:
-    d: 18000
-    deadband: 15.0
-    f: 1900
-    i: 320
-    imax: 1700
-    max_pwm: 0.0
-    p: 4800
+    d: 0
+    deadband: 5
+    f: 300
+    i: 0
+    imax: 0
+    max_pwm: 600
+    p: 6200
     sg_left: 0
     sg_right: 0
-    sgleftref: 0.0
-    sgrightref: 0.0
-    sign: 0.0
+    sgleftref: 0
+    sgrightref: 0
+    sign: 0
+    torque_limit: 500
+    torque_limiter_gain: 64
+  pos_filter:
+    tau: 0.05
 ffj3:
+  backlash_compensation: true
   pid:
-    d: 4178
-    deadband: 35.0
-    f: 1944
-    i: 71
-    imax: 1763
-    max_pwm: 0.0
-    p: 4308
+    d: 0
+    deadband: 5
+    f: 300
+    i: 0
+    imax: 0
+    max_pwm: 600
+    p: 6200
     sg_left: 0
     sg_right: 0
-    sgleftref: 0.0
-    sgrightref: 0.0
-    sign: 0.0
+    sgleftref: 0
+    sgrightref: 0
+    sign: 0
+    torque_limit: 450
+    torque_limiter_gain: 64
+  pos_filter:
+    tau: 0.05
 ffj4:
+  backlash_compensation: true
   pid:
-    d: 18000
-    deadband: 15.0
-    f: 1900
-    i: 320
-    imax: 1700
-    max_pwm: 0.0
-    p: 4800
+    d: 0
+    deadband: 5
+    f: 300
+    i: 0
+    imax: 0
+    max_pwm: 400
+    p: 6200
     sg_left: 0
     sg_right: 0
-    sgleftref: 0.0
-    sgrightref: 0.0
-    sign: 0.0
+    sgleftref: 0
+    sgrightref: 0
+    sign: 0
+    torque_limit: 350
+    torque_limiter_gain: 64
+  pos_filter:
+    tau: 0.05
 lfj0:
+  backlash_compensation: true
   pid:
     d: 0
-    deadband: 0.0
-    f: 0
+    deadband: 5
+    f: 300
     i: 0
     imax: 0
-    max_pwm: 0.0
-    p: 0
+    max_pwm: 600
+    p: 6200
     sg_left: 0
     sg_right: 0
-    sgleftref: 0.0
-    sgrightref: 0.0
-    sign: 0.0
+    sgleftref: 0
+    sgrightref: 0
+    sign: 0
+    torque_limit: 500
+    torque_limiter_gain: 64
+  pos_filter:
+    tau: 0.05
 lfj3:
+  backlash_compensation: true
   pid:
     d: 0
-    deadband: 0.0
-    f: 0
+    deadband: 5
+    f: 300
     i: 0
     imax: 0
-    max_pwm: 0.0
-    p: 0
+    max_pwm: 600
+    p: 6200
     sg_left: 0
     sg_right: 0
-    sgleftref: 0.0
-    sgrightref: 0.0
-    sign: 0.0
+    sgleftref: 0
+    sgrightref: 0
+    sign: 0
+    torque_limit: 450
+    torque_limiter_gain: 64
+  pos_filter:
+    tau: 0.05
 lfj4:
+  backlash_compensation: true
   pid:
     d: 0
-    deadband: 0.0
-    f: 0
+    deadband: 5
+    f: 300
     i: 0
     imax: 0
-    max_pwm: 0.0
-    p: 0
+    max_pwm: 400
+    p: 6200
     sg_left: 0
     sg_right: 0
-    sgleftref: 0.0
-    sgrightref: 0.0
-    sign: 0.0
+    sgleftref: 0
+    sgrightref: 0
+    sign: 0
+    torque_limit: 350
+    torque_limiter_gain: 64
+  pos_filter:
+    tau: 0.05
 lfj5:
+  backlash_compensation: true
   pid:
     d: 0
-    deadband: 0.0
-    f: 0
+    deadband: 5
+    f: 300
     i: 0
     imax: 0
-    max_pwm: 0.0
-    p: 0
+    max_pwm: 500
+    p: 6200
     sg_left: 0
     sg_right: 0
-    sgleftref: 0.0
-    sgrightref: 0.0
-    sign: 0.0
+    sgleftref: 0
+    sgrightref: 0
+    sign: 0
+    torque_limit: 450
+    torque_limiter_gain: 64
+  pos_filter:
+    tau: 0.05
 mfj0:
+  backlash_compensation: true
   pid:
     d: 0
-    deadband: 0.0
-    f: 0
+    deadband: 5
+    f: 300
     i: 0
     imax: 0
-    max_pwm: 0.0
-    p: 0
+    max_pwm: 600
+    p: 6200
     sg_left: 0
     sg_right: 0
-    sgleftref: 0.0
-    sgrightref: 0.0
-    sign: 0.0
+    sgleftref: 0
+    sgrightref: 0
+    sign: 0
+    torque_limit: 500
+    torque_limiter_gain: 64
+  pos_filter:
+    tau: 0.05
 mfj3:
+  backlash_compensation: true
   pid:
     d: 0
-    deadband: 0.0
-    f: 0
+    deadband: 5
+    f: 300
     i: 0
     imax: 0
-    max_pwm: 0.0
-    p: 0
+    max_pwm: 600
+    p: 6200
     sg_left: 0
     sg_right: 0
-    sgleftref: 0.0
-    sgrightref: 0.0
-    sign: 0.0
+    sgleftref: 0
+    sgrightref: 0
+    sign: 0
+    torque_limit: 450
+    torque_limiter_gain: 64
+  pos_filter:
+    tau: 0.05
 mfj4:
+  backlash_compensation: true
   pid:
     d: 0
-    deadband: 0.0
-    f: 0
+    deadband: 5
+    f: 300
     i: 0
     imax: 0
-    max_pwm: 0.0
-    p: 0
+    max_pwm: 400
+    p: 6200
     sg_left: 0
     sg_right: 0
-    sgleftref: 0.0
-    sgrightref: 0.0
-    sign: 0.0
+    sgleftref: 0
+    sgrightref: 0
+    sign: 0
+    torque_limit: 350
+    torque_limiter_gain: 64
+  pos_filter:
+    tau: 0.05
 rfj0:
+  backlash_compensation: true
   pid:
     d: 0
-    deadband: 0.0
-    f: 0
+    deadband: 5
+    f: 300
     i: 0
     imax: 0
-    max_pwm: 0.0
-    p: 0
+    max_pwm: 600
+    p: 6200
     sg_left: 0
     sg_right: 0
-    sgleftref: 0.0
-    sgrightref: 0.0
-    sign: 0.0
+    sgleftref: 0
+    sgrightref: 0
+    sign: 0
+    torque_limit: 500
+    torque_limiter_gain: 64
+  pos_filter:
+    tau: 0.05
 rfj3:
-  pid:
-    d: 70
-    deadband: 0.0
-    f: 0
-    i: 0
-    imax: 20
-    max_pwm: 0.0
-    p: 0
-    sg_left: 0
-    sg_right: 0
-    sgleftref: 0.0
-    sgrightref: 0.0
-    sign: 0.0
-rfj4:
+  backlash_compensation: true
   pid:
     d: 0
-    deadband: 0.0
-    f: 0
+    deadband: 5
+    f: 300
     i: 0
     imax: 0
-    max_pwm: 0.0
-    p: 0
+    max_pwm: 600
+    p: 6200
     sg_left: 0
     sg_right: 0
-    sgleftref: 0.0
-    sgrightref: 0.0
-    sign: 0.0
-thj1:
-  pid:
-    d: 18000
-    deadband: 30.0
-    f: 1900
-    i: 320
-    imax: 1700
-    max_pwm: 0.0
-    p: 4800
-    sg_left: 0
-    sg_right: 0
-    sgleftref: 0.0
-    sgrightref: 0.0
-    sign: 0.0
-thj2:
-  pid:
-    d: 18000
-    deadband: 30.0
-    f: 1900
-    i: 320
-    imax: 1700
-    max_pwm: 0.0
-    p: 4800
-    sg_left: 0
-    sg_right: 0
-    sgleftref: 0.0
-    sgrightref: 0.0
-    sign: 0.0
-thj3:
-  pid:
-    d: 18000
-    deadband: 15.0
-    f: 1900
-    i: 320
-    imax: 1700
-    max_pwm: 0.0
-    p: 4800
-    sg_left: 0
-    sg_right: 0
-    sgleftref: 0.0
-    sgrightref: 0.0
-    sign: 0.0
-thj4:
+    sgleftref: 0
+    sgrightref: 0
+    sign: 0
+    torque_limit: 450
+    torque_limiter_gain: 64
+  pos_filter:
+    tau: 0.05
+rfj4:
+  backlash_compensation: true
   pid:
     d: 0
-    deadband: 25.0
-    f: 1900
-    i: 135
-    imax: 150
-    max_pwm: 0.0
-    p: 4800
+    deadband: 5
+    f: 300
+    i: 0
+    imax: 0
+    max_pwm: 400
+    p: 6200
     sg_left: 0
     sg_right: 0
-    sgleftref: 0.0
-    sgrightref: 0.0
-    sign: 0.0
+    sgleftref: 0
+    sgrightref: 0
+    sign: 0
+    torque_limit: 350
+    torque_limiter_gain: 64
+  pos_filter:
+    tau: 0.05
+thj1:
+  backlash_compensation: true
+  pid:
+    d: 0
+    deadband: 5
+    f: 300
+    i: 0
+    imax: 0
+    max_pwm: 500
+    p: 6200
+    sg_left: 0
+    sg_right: 0
+    sgleftref: 0
+    sgrightref: 0
+    sign: 0
+    torque_limit: 400
+    torque_limiter_gain: 64
+  pos_filter:
+    tau: 0.05
+thj2:
+  backlash_compensation: true
+  pid:
+    d: 0
+    deadband: 5
+    f: 300
+    i: 0
+    imax: 0
+    max_pwm: 500
+    p: 6200
+    sg_left: 0
+    sg_right: 0
+    sgleftref: 0
+    sgrightref: 0
+    sign: 0
+    torque_limit: 400
+    torque_limiter_gain: 64
+  pos_filter:
+    tau: 0.05
+thj3:
+  backlash_compensation: true
+  pid:
+    d: 0
+    deadband: 5
+    f: 300
+    i: 0
+    imax: 0
+    max_pwm: 400
+    p: 6200
+    sg_left: 0
+    sg_right: 0
+    sgleftref: 0
+    sgrightref: 0
+    sign: 0
+    torque_limit: 350
+    torque_limiter_gain: 64
+  pos_filter:
+    tau: 0.05
+thj4:
+  backlash_compensation: false
+  pid:
+    d: 0
+    deadband: 5
+    f: 300
+    i: 0
+    imax: 0
+    max_pwm: 500
+    p: 8200
+    sg_left: 0
+    sg_right: 0
+    sgleftref: 0
+    sgrightref: 0
+    sign: 0
+    torque_limit: 150
+    torque_limiter_gain: 64
+  pos_filter:
+    tau: 0.05
 thj5:
+  backlash_compensation: false
   pid:
-    d: 8000
-    deadband: 7.0
-    f: 1900
-    i: 200
-    imax: 1200
-    max_pwm: 0.0
-    p: 6800
+    d: 0
+    deadband: 5
+    f: 300
+    i: 0
+    imax: 0
+    max_pwm: 500
+    p: 8200
     sg_left: 0
     sg_right: 0
-    sgleftref: 0.0
-    sgrightref: 0.0
-    sign: 0.0
+    sgleftref: 0
+    sgrightref: 0
+    sign: 0
+    torque_limit: 150
+    torque_limiter_gain: 64
+  pos_filter:
+    tau: 0.05
 wrj1:
+  backlash_compensation: false
   pid:
-    d: 18000
-    deadband: 15.0
-    f: 1900
-    i: 320
-    imax: 1700
-    max_pwm: 0.0
-    p: 4800
+    d: 0
+    deadband: 5
+    f: 300
+    i: 0
+    imax: 0
+    max_pwm: 600
+    p: 6200
     sg_left: 0
     sg_right: 0
-    sgleftref: 0.0
-    sgrightref: 0.0
-    sign: 1.0
+    sgleftref: 0
+    sgrightref: 0
+    sign: 0
+    torque_limit: 200
+    torque_limiter_gain: 64
+  pos_filter:
+    tau: 0.05
 wrj2:
+  backlash_compensation: false
   pid:
-    d: 18000
-    deadband: 15.0
-    f: 1900
-    i: 320
-    imax: 1700
-    max_pwm: 0.0
-    p: 4800
+    d: 0
+    deadband: 5
+    f: 300
+    i: 0
+    imax: 0
+    max_pwm: 500
+    p: 6200
     sg_left: 0
     sg_right: 0
-    sgleftref: 0.0
-    sgrightref: 0.0
-    sign: 0.0
+    sgleftref: 0
+    sgrightref: 0
+    sign: 0
+    torque_limit: 200
+    torque_limiter_gain: 64
+  pos_filter:
+    tau: 0.05
